# Sub-Panel-Meter-Senior-Design-Spring-2026

./: README.md
software/: CMakeLists.txt
software/main/: ADS131M0x.c  ADS131M0x.h  CMakeLists.txt  adc_hal.c  adc_hal.h  main.cpp  metering.c  metering.h
